# Ai-yolo

./: .gitignore  .pre-commit-config.yaml  3.1.0  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.py  settings.py
datasets/: readme.md
datasets/person/: data.yaml
datasets/person/test/labels/: -_jpg.rf.73a91ea87da392b5e272a13b8207ceaf.txt  0.rf.f491794c2d658a0a610e18975ba7c88c.txt  00SUBWAY1-articleLarge_jpg.rf.a5d575a1f93f12cdfbe9ff9757918be5.txt  01-08-2022__01-07-22PM_jpg.rf.4d76fc637a4d635b84609d13c6e592e5.txt  01-08-2022__01-34-02PM_jpg.rf.c5dece7eb037bf330fce181ffdddad8a.txt  01-08-2022__01-36-27PM_jpg.rf.cf0afa6263a7c2732a61ebd559851ec5.txt  01-08-2022__01-42-57PM_jpg.rf.922c595248acf19a57e70312085ee1d2.txt  01-08-2022__01-45-35PM_jpg.rf.4f8c3e6f117ed2d2002c251901e2795e.txt  01-08-2022__01-47-07PM_jpg.rf.04d4c51c0d8338838fadad9f70d3ce38.txt  01-08-2022__01-48-22PM_jpg.rf.618fd19ffaa4af8e04861343173a0586.txt  01-08-2022__01-55-29PM_jpg.rf.1826f6dc27ba7ed05f003007c19afe8f.txt  01-08-2022__02-02-26PM_jpg.rf.2b50fe0a808bb603db00f6be6220a42f.txt  01-08-2022__02-03-59PM_jpg.rf.725e9395f271c14475cf5f99e1a4614d.txt  01-08-2022__02-21-44PM_jpg.rf.c08025481c4a577cd44ee96345b95b62.txt  01-08-2022__02-22-20PM_jpg.rf.f7ba6d98e18372540f43f3d6f6e7fafe.txt  01-08-2022__02-48-23PM_jpg.rf.ca0d287b1c1db523f7e7eb0c68c2bfec.txt  01-08-2022__02-51-22PM_jpg.rf.9d6c38321b1afeb0b7d67eda98597814.txt  01-08-2022__02-51-39PM_jpg.rf.4858e1d3966f17e0cb297769a757f6c7.txt  01-08-2022__02-58-54PM_jpg.rf.e897cc8737a909666400858ac5c8cedd.txt  01-08-2022__03-00-17PM_jpg.rf.b27dd88633e12290c942e3a3c218c857.txt  01-08-2022__03-13-13PM_jpg.rf.706cfa74392f51ba9cc22ce717e1607c.txt  01-08-2022__03-25-18PM_jpg.rf.cc1c84ac29829cd889f1b2409f24f6b7.txt  01-08-2022__03-44-57PM_jpg.rf.7389bdd6a8b394c8a03b9ef4c3bac0c5.txt  01-08-2022__03-48-59PM_jpg.rf.fa2f3274b904b8edf2fc2a7a93dcc1b5.txt  01-08-2022__03-53-54PM_jpg.rf.c90b1930b5eeb335807fe9be348778de.txt  01-08-2022__03-59-16PM_jpg.rf.0724501b4183f7e1bee6a17d1666ee38.txt  01-08-2022__04-08-03PM_jpg.rf.1855609c4bf2936c496c3f06b1e44277.txt  01-08-2022__04-08-57PM_jpg.rf.0886e7f0c90aa0e174cc36a5a6c3eb84.txt  01-08-2022__04-09-50PM_jpg.rf.8794fe2e844e7d32ad3354f0f733a794.txt  01-08-2022__04-15-00PM_jpg.rf.0fedf3d92fbcb5ac926b73702766d8f6.txt  01-08-2022__04-17-29PM_jpg.rf.5b43fc4c79f8c1595b823fb94ff357f2.txt  01-08-2022__04-20-36PM_jpg.rf.afd591dff3edcdff4630bdf8c256e061.txt  01-08-2022__04-25-57PM_jpg.rf.18261ffa5a35d63bb9268aca920302c6.txt  01-08-2022__04-30-00PM_jpg.rf.33f84935bdd9f5150cad973ef405f720.txt  01-08-2022__08-34-13AM_jpg.rf.d42e64b8dfca2c33d45b6487943bd519.txt  01-08-2022__08-45-01AM_jpg.rf.a7e0334a3242a3bbcf7ff47dabf98fea.txt  01-08-2022__09-11-15AM_jpg.rf.c22a9581202f988e9792ba3c8d1dd59c.txt  01-08-2022__09-34-23AM_jpg.rf.07d06f22e228783ec2fe9c76d1e53b08.txt  01-08-2022__09-56-05AM_jpg.rf.916c33e757c987864a56abfe60c4858f.txt  01-08-2022__10-03-52AM_jpg.rf.46d6185460e0876404fbf388dd0103de.txt  (+1586 more)
datasets/person/train/: labels.cache
datasets/person/train/labels/: 000000000036_jpg.rf.80cd282a72df7757f4388b76a46202bf.txt  000000000036_jpg.rf.96a8d1a51dc8151a1f5409a9190f1422.txt  000000000036_jpg.rf.d3691a2e61dd2419f478a4dbb2740e61.txt  000000000086_jpg.rf.2437bcc5eb54a4899cbf54a47fef2f48.txt  000000000086_jpg.rf.574c06be42ba78bde7a7da1da161e183.txt  000000000086_jpg.rf.cfb92c2a9c7bc899ab1a1bacfe72e21b.txt  000000000113_jpg.rf.591ccf5987a46c84e6909cf751142bf7.txt  000000000113_jpg.rf.78b8b5be223db625b46a56373458cf81.txt  000000000113_jpg.rf.caf26203f58c7287d6c9df784405da71.txt  000000000165_jpg.rf.2304539f706fe2d2976b18582e9b32ee.txt  000000000165_jpg.rf.4de936f78337fb73d1f9cc146b33b4d8.txt  000000000165_jpg.rf.e08c26b174b0799e61335b481f16d29a.txt  000000000326_jpg.rf.15a66efbe785d3f762c8e954e80af261.txt  (+95070 more)
datasets/person/valid/: labels.cache
docs/: FEATURES.md  GUI_GUIDE.md  INSTALLATION.md  README.md  USAGE.md  draw_flowcharts.py
scripts/: demo.py  fix_installation.py  fix_numpy_conflict.py  generate_test_report.py  run_gui.py  setup.py  test_torch.py
src/: __init__.py  main.py
src/core/: __init__.py  alert_system.py  data_logger.py  person_counter.py  person_detector.py  visualizer.py
src/ui/: __init__.py  gui.py
src/utils/: __init__.py  formatters.py  helpers.py  validators.py
tests/: TEST_CASES.md  __init__.py
tests/integration/: README_INTEGRATION_TESTS.md  integration_test.py
tests/system/: SYSTEM_TEST_CASES.md  __init__.py  conftest.py  system_test.py
tests/unit/: TEST_CASES.md  alert_system_test.py  data_logger_test.py  person_counter_test.py  person_detector_test.py
(+13358 files in other folders)
